# Kandidat

./: .ghci  .gitignore  README  README.markdown  Setup.hs  cabal-readme  fegr.cabal  git.howto
mote/: 2010.03.17
new-rapport/: Abstract.tex  Appendix.tex  Core.tex  Diskussion.tex  FramtidaArbeten.tex  Inledning.tex  Optimise.tex  OrdViAnvänder  Preface.tex  Rapport.aux  Rapport.tex  Rapport.toc  RelateradeArbeten.tex  Resultat.tex  Slutsats.tex  Socker.tex  fegr.sty  heap.eps  maxheap.eps  plan  power.eps  powernorm.eps  powerstack.eps  references.bib  shapes.eps  shapesnorm.eps
opponering/: opponering.lyx
parser/: AST.hs  Diabetes.hs  Pretty.hs  PrettyTest.hs  STGParser.hs  SugarParser.hs  SugarTree.hs  examples.stg  noSugar.stg
planeringsrapport/: rapport.lyx
planneringsrapport/: rapport.lyx
prelude/: .ListTest7.hls.swp  .Prelude.hls.swp  MiniPrelude.hls  Prelude.hls
presentation/: Presentationpres.txt  optimise1.txt  optimise2.txt  optimise3.txt  optimise4.txt  optimise5.txt  optimisenotuse.txt  optimiseuse.txt  power.txt  presentation.lyx  presentation.lyx~  sprak.txt  test.lyx
rapport/: Callstack.txt  Diskussion.txt  FutureWork.txt  RelateradeArbeten.lyx  RelateradeArbeten.lyx~  diabetes.txt  inledning.lyx  metodik  opt1.lyx  optimering.txt  rapport.lyx  references.bib  resultat.txt  skeleton.txt  stg.lyx  stgexts.txt  titelsida.lyx
semantics/: force.txt  newsemantics.lyx  optimisewith  semantics.lyx
test/: Benchmark.hs  Debugger.hs  Graph.hs  Interpreter.hs  Main.hs  OGL.hs  Shapes.hs  Types.hs  Util.hs
testresults/: extract.sh  opttest12.csv  power.csv  power.gp  regex.csv  results.csv  results2.csv  results3.csv  shapes.csv  shapes.gp  shapescb.csv
testsuite/: ArithmTest1-double.hls  ArithmTest1.hls  ArithmTest2.hls  ArithmTest3.hls  ArithmTest4.hls  ArithmTest5.hls  ArithmTest6.hls  FunTest1.hls  FunTest2.hls  FunTest3.hls  FunTest4.hls  FunTest5.hls  Graph.hls  LamLift1.hls  LamTest1.hls  LetRecTest1.hls  ListTest1.hls  ListTest2.hls  ListTest3.hls  ListTest4.hls  ListTest5.hls  ListTest6.hls  ListTest7.hls  MatrixTest1.hls  NegTest1.hls  OptTest1.hls  (+22 more)
(+55 files in other folders)
