Name:                fegr
Version:             0.1
Author:              F.E.G.R
Build-Type:          Custom
Cabal-Version:       >=1.6

flag test
  description: Build test program.
  default:     False

Executable test
  hs-source-dirs:  src, test
  other-modules:   Parser.Pretty.Test
  main-is:         Main.hs
  build-depends:   base, QuickCheck >= 2, wl-pprint, parsec, filepath
                   , directory, uniplate, haskell98, containers, mtl
                   , haskeline
  if !flag(test)
    buildable:     False
